src/test/ui/parser/issues/issue-10636-2.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/issue-10636-2.rs:8:1
   |
LL |     option.map(|some| 42;
   |               - unmatched opening delimiter begins here
...
LL | }
   | ^ mismatched closing delimiter

error: expected expression, found `)`
  --> $DIR/issue-10636-2.rs:8:1
   |
LL | }
   | ^ expected expression

error: closure bodies that contain statements must be surrounded by braces
  --> $DIR/issue-10636-2.rs:5:21
   |
LL |     option.map(|some| 42;
   |                     ^
...
LL | }
   | ^
   |
note: statement found outside of a block
  --> $DIR/issue-10636-2.rs:5:25
   |
LL |     option.map(|some| 42;
   |                       --^ this `;` turns the preceding closure into a statement
   |                       |
   |                       this expression is a statement because of the trailing semicolon
note: the closure body may be incorrectly delimited
  --> $DIR/issue-10636-2.rs:5:16
   |
LL |     option.map(|some| 42;
   |                ^^^^^^^^^ this is the parsed closure...
...
LL | }
   | - ...but likely you meant the closure to end here
help: try adding braces
   |
LL ~     option.map(|some| { 42;
LL |
LL | 
LL ~ }}
   |

error: aborting due to 3 previous errors

